chat-cli/error.txt
    Checking chat-cli v0.1.0 (/home/mgs/bens_chat2/chat-cli)
error[E0425]: cannot find value `aaaa` in this scope
   --> src/main.rs:278:9
    |
278 |         aaaa
    |         ^^^^ not found in this scope

warning: variable does not need to be mutable
   --> src/main.rs:117:13
    |
117 |         let mut person = String::new();
    |             ----^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `chat_id`
  --> src/main.rs:70:36
   |
70 |             (Stats::Conversation { chat_id }, Acction::GotoChats) => self.state = Stats::Chats,
   |                                    ^^^^^^^ help: try ignoring the field: `chat_id: _`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `person`
   --> src/main.rs:117:13
    |
117 |         let mut person = String::new();
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_person`

For more information about this error, try `rustc --explain E0425`.
warning: `chat-cli` (bin "chat-cli") generated 3 warnings
error: could not compile `chat-cli` (bin "chat-cli") due to 1 previous error; 3 warnings emitted
